[gd_scene load_steps=15 format=2]

[ext_resource path="res://overlap/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://overlap/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/playerDetection.gd" type="Script" id=3]
[ext_resource path="res://enemy/enemy_alc.gd" type="Script" id=4]
[ext_resource path="res://assets/Action RPG Resources/Enemies/Bat.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "animate",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 12.2526

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[sub_resource type="CircleShape2D" id=9]
radius = 64.2398

[node name="enemy_alc" type="KinematicBody2D"]
script = ExtResource( 4 )
FRICTION = 100
SPEED = 50
MAX_LIFE = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "animate"
frame = 1
playing = true
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.5, -23 )
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.5, -23 )
shape = SubResource( 8 )

[node name="playerDetection" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetection"]
modulate = Color( 1, 1, 1, 0.329412 )
position = Vector2( 0, -22.75 )
shape = SubResource( 9 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="playerDetection" to="playerDetection" method="_on_playerDetection_body_entered"]
[connection signal="body_exited" from="playerDetection" to="playerDetection" method="_on_playerDetection_body_exited"]

[editable path="HitBox"]
[editable path="HurtBox"]
